chore: better packaging/classloader strategy reducing the WAR size drastically
Signed-off-by: manticore-projects <andreas@manticore-projects.com>